<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="100" >

    <LinearLayout
        android:id="@+id/mpoli"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/fromdate"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:enabled="true"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            android:text="@string/from_date"
            android:textSize="15sp"
            android:visibility="gone"
            android:layout_weight="0"
            tools:ignore="RtlSymmetry"

            android:paddingLeft="10dp" />


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/select_mpo"
            android:layout_height="42dp"
            android:textSize="16sp"
            android:filterTouchesWhenObscured="true"
            android:hapticFeedbackEnabled="true"
            android:fontFamily="@font/acme"
            android:layout_weight="1"
            />

        <Spinner
            android:id="@+id/mpo"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:ems="10"
            android:background="@android:drawable/editbox_background"
            android:filterTouchesWhenObscured="true"
            android:hapticFeedbackEnabled="true"
            android:prompt="@string/customerspin"
            android:soundEffectsEnabled="true"
            android:spinnerMode="dropdown"
            android:textSize="14sp"
            tools:ignore="UnusedAttribute"
            android:fontFamily="@font/acme"
            android:layout_weight="2"
            android:weightSum="3"/>
        <requestFocus/>


    </LinearLayout>

    <LinearLayout

        android:id="@+id/mpo_am_report"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/select_date"
            android:layout_height="42dp"
            android:textSize="16sp"
            android:filterTouchesWhenObscured="true"
            android:hapticFeedbackEnabled="true"
            android:fontFamily="@font/acme"
            android:layout_weight="1"
            />


        <TextView
            android:id="@+id/todate"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_weight="4"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:enabled="true"
            android:fontFamily="@font/acme"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            android:text="@string/to_date"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry"
            android:paddingLeft="10dp" />


        <Button
            android:id="@+id/submitBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/darkblue"
            android:gravity="center"
            android:hapticFeedbackEnabled="true"
            android:soundEffectsEnabled="true"
            android:text="show"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,UnusedAttribute"
            android:visibility="gone"/>



        <Button
            android:id="@+id/submitBtn_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:hapticFeedbackEnabled="true"
            android:soundEffectsEnabled="true"
            android:text="show"
            android:background="@drawable/dcr_page_button"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="@font/acme"
            />






    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">




        <TextView
            android:layout_width="wrap_content"
            android:text="@string/mpo_name"
            android:layout_height="42dp"
            android:textSize="15sp"
            android:filterTouchesWhenObscured="true"
            android:hapticFeedbackEnabled="true"
            android:fontFamily="@font/acme"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/name_of_mpo"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_weight="4"
            android:background="@android:drawable/editbox_background"
            android:clickable="false"
            android:textAlignment="viewStart"
            android:fontFamily="@font/acme"
            android:textColor="@color/deeppurple"
            android:textSize="12sp"
            android:textStyle="bold"
            android:hint="@string/mpo_name"
            android:gravity="start" />









        <TextView
            android:layout_width="wrap_content"
            android:text="@string/am_name"
            android:layout_height="42dp"
            android:textSize="15sp"
            android:filterTouchesWhenObscured="true"
            android:hapticFeedbackEnabled="true"
            android:fontFamily="@font/acme"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/name_of_am"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_weight="4"
            android:background="@android:drawable/editbox_background"
            android:clickable="false"
            android:hint="@string/mpo_name"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:fontFamily="@font/acme"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="98"

        >


    </LinearLayout>




    <LinearLayout
        android:id="@+id/slistLayout"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgray"
        android:orientation="horizontal"
        >


        <TextView
            android:id="@+id/dcr_sl"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:focusable="true"
            android:text="@string/serial"
            android:textColor="@color/darkblue"
            android:fontFamily="@font/acme"
            />

        <TextView
            android:id="@+id/dco_chem_name"
            android:text="@string/visit_to5"
            android:layout_width="25dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:focusable="true"
            android:layout_marginStart="10dp"
            android:layout_gravity="start"
            android:textAlignment="gravity"
            android:textColor="@color/darkblue"
            android:fontFamily="@font/acme"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/ppm_pm_name"
            android:text="@string/promo_mat"
            android:layout_width="25dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_marginStart="0dp"
            android:textAlignment="gravity"
            android:layout_gravity="start"
            android:textColor="@color/blue"
            android:fontFamily="@font/acme"

            android:focusable="true"
            android:layout_marginLeft="0dp" />


        <TextView
            android:id="@+id/shift_gift"
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:fontFamily="@font/acme"
            android:text="Type"
            android:textAlignment="center"
            android:textColor="@color/darkblue"

            android:visibility="visible"
            android:focusable="true" />
        <TextView
            android:id="@+id/all_rest_quant"
            android:layout_width="12dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.8"
            android:clickable="true"
            android:textAlignment="gravity"
            android:layout_gravity="center"
            android:text="@string/total"
            android:textColor="@color/pink"
            android:fontFamily="@font/acme"

            android:focusable="true" />

        <TextView
            android:id="@+id/all_re"
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:layout_weight="0.8"
            android:clickable="true"
            android:fontFamily="@font/acme"
            android:text="@string/given"
            android:textAlignment="gravity"
            android:textColor="@color/deeppurple"
            android:focusable="true" />


        <TextView
            android:id="@+id/Rest"
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:layout_weight="0.8"
            android:clickable="true"
            android:fontFamily="@font/acme"
            android:text="Rest"
            android:textAlignment="gravity"
            android:textColor="@color/bg_gradient_end"
            android:focusable="true" />


        <TextView
            android:id="@+id/am_pm_shift"
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:layout_weight="0.8"
            android:clickable="true"
            android:fontFamily="@font/acme"
            android:text="@string/shift"
            android:textAlignment="gravity"
            android:textColor="@color/darkblue"

            android:focusable="true" />




    </LinearLayout>

    <ListView
        android:id="@+id/pListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="95.00"
        android:listSelector="@drawable/active"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="1px">
    </ListView>

    <LinearLayout
        android:id="@+id/totalshow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:drawable/alert_light_frame"
        android:weightSum="98"
        android:visibility="gone">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text=""
            android:textStyle="bold"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/totalsellquantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:gravity="end"
            android:textColor="@color/darkblue"
            android:textStyle="bold"
            android:textSize="12sp"
            android:text="" />

        <TextView
            android:id="@+id/totalsellvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:gravity="end"
            android:textColor="@color/darkblue"
            android:textStyle="bold"
            android:textSize="12sp"

            android:text="" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >

        <Button
            android:id="@+id/backbt"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/dcr_page_button"
            android:gravity="center"
            android:hapticFeedbackEnabled="true"
            android:onClick="finishActivity"
            android:soundEffectsEnabled="true"
            android:text="&lt;"
            android:textColor="#FFF"
            android:textSize="@dimen/_12sdp"
            tools:ignore="HardcodedText,UnusedAttribute" />


    </RelativeLayout>

</LinearLayout>