<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="26">


    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="1dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



        <TextView
        android:id="@+id/serial_return"
        android:layout_height="fill_parent"
        android:layout_width="wrap_content"
        android:layout_weight="2"
        android:focusable="true"
        android:text="@string/serial"
        android:gravity="start"
        android:textSize="@dimen/_8sdp"
        android:textColor="@color/darkblue" />

    <TextView
        android:id="@+id/product_name_return"
        android:layout_width="0dp"
        android:layout_height="fill_parent"

        android:layout_weight="8"
        android:focusable="true"
        android:gravity="start"
        android:text="@string/party_name"
        android:textColor="@color/blue"
        android:textSize="@dimen/_8sdp" />

    <TextView
        android:id="@+id/qnty_return"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="5"
        android:clickable="true"
        android:focusable="true"
        android:text="ORDER"
        android:gravity="right"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_8sdp" />

    <TextView
        android:id="@+id/value_return"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="5"
        android:clickable="true"
        android:focusable="true"
        android:gravity="right"
        android:text="@string/invoice_value"
        android:textColor="@color/blue"
        android:textSize="@dimen/_8sdp"/>

    <TextView
        android:id="@+id/returnpercentage_return"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="5"
        android:clickable="true"
        android:focusable="true"
        android:gravity="right"
        android:text="Return"
        android:textColor="@color/green1"
        android:textSize="@dimen/_8sdp"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>